--- a/index.html
+++ b/index.html
@@ -13,14 +13,41 @@
         <h2>To-do list</h2>
       </div>
       <div class="todo-body">
-        <div class="add-block"></div>
+        <div class="add-block">
+          <input
+            type="text"
+            class="add-field"
+            placeholder="A task you want to complete"
+          />
+          <button class="add-button col-3">+</button>
+        </div>
         <ul class="tasks">
           <li class="task">
             <div class="task-checked col-1">
               <input type="checkbox" />
             </div>
             <div class="task-text col-2">Task 1</div>
-            <div class="task-remove col-3"></div>
+            <div class="task-remove col-3">
+              <!-- <img src="./img/trash.svg" alt="" /> -->
+            </div>
+          </li>
+          <li class="task">
+            <div class="task-checked col-1">
+              <input type="checkbox" />
+            </div>
+            <div class="task-text col-2">Task 2</div>
+            <div class="task-remove col-3">
+              <!-- <img src="./img/trash.svg" alt="" /> -->
+            </div>
+          </li>
+          <li class="task">
+            <div class="task-checked col-1">
+              <input type="checkbox" />
+            </div>
+            <div class="task-text col-2">Task 3</div>
+            <div class="task-remove col-3">
+              <!-- <img src="./img/trash.svg" alt="" /> -->
+            </div>
           </li>
         </ul>
       </div>
