--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           />
           <button class="add-button col-3">+</button>
         </div>
-        <ul class="tasks">
+        <ul class="tasks" id="tasks-list">
           <li class="task">
             <div class="task-checked col-1">
               <input type="checkbox" />
@@ -52,6 +52,8 @@
         </ul>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
